cmake_minimum_required(VERSION 3.27)
project(PROG2400_700_Lectures)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_FLAGS "-static")

add_executable(echo echo/main.cpp)
add_executable(command_line command_line/main.cpp)
add_executable(stringstreams stringstreams/main.cpp)
add_executable(pointers pointers/main.cpp)
add_executable(vector vector/main.cpp)
add_executable(linked_lists linked_lists/main.cpp)
add_executable(smart_ptr smart_ptr/main.cpp)
add_executable(queues queues/main.cpp)
add_executable(stacks stacks/main.cpp)
add_executable(palindrome palindrome/main.cpp)
add_executable(recursion recursion/main.cpp)
add_executable(factorial factorial/main.cpp)
add_executable(directory_names directory_names/main.cpp)
add_executable(binary_search_tree binary_search_tree/main.cpp)
add_executable(sorting sorting/main.cpp)